--- a/css/styles.css
+++ b/css/styles.css
@@ -104,25 +104,11 @@ h5 a:hover {
 }
 
 h6 {
-    font: 300 26px/38px "Roboto Slab", sans-serif;
+    font: 300 20px/28px "Roboto Slab", sans-serif;
     color: #333333;
 }
 
 h6 a:hover {
-    color: #66b3ff;
-}
-
-h7 {
-    font: 400 19px/28px "Roboto Slab", sans-serif;
-    color: #777777;
-    background-color: #FFF;
-}
-
-h7 a {
-    color: #00284d;
-}
-
-h7 a:hover {
     color: #66b3ff;
 }
 
@@ -386,23 +372,23 @@ h7 a:hover {
     margin: 5px;
 }
 
-.sf-menu li:nth-child(1) {
+.sf-menu > li:nth-child(1) {
     transition: all 0.5s ease 0.2s;
 }
 
-.sf-menu li:nth-child(2) {
+.sf-menu > li:nth-child(2) {
     transition: all 0.5s ease 0.3s;
 }
 
-.sf-menu li:nth-child(3) {
+.sf-menu > li:nth-child(3) {
     transition: all 0.5s ease 0.4s;
 }
 
-.sf-menu li:nth-child(4) {
+.sf-menu > li:nth-child(4) {
     transition: all 0.5s ease 0.5s;
 }
 
-.sf-menu li:nth-child(5) {
+.sf-menu > li:nth-child(5) {
     transition: all 0.5s ease 0.6s;
 }
 
@@ -568,7 +554,7 @@ h1 a .second {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     display: none;
 }
 
@@ -762,7 +748,10 @@ h1 a .second {
 }
 
 .box2-wrapper2 {
+    position: relative;
     text-align: center;
+    max-width: 80%;
+    left: 10%;
 }
 
 .box2-wrapper6 {
@@ -835,8 +824,10 @@ h1 a .second {
 }
 
 .box3 img {
-    border-radius: 600px;
+    border-radius: 50%;
     margin-bottom: 15px;
+    width: 100%;
+    object-fit: cover;
 }
 
 .box3 h3 {
@@ -851,15 +842,6 @@ h1 a .second {
     margin-bottom: 20px;
 }
 
-/* ======= List 1 wrapper 1 ======= */
-.list1-wrapper1 {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 1rem;
-    width: 80%;
-    margin: 20px auto 0px;
-}
-
 /* ======= Box 2 Wrapper 2 About us ======= */
 .box2-wrapper2 {
     margin-top: 32px;
@@ -868,6 +850,9 @@ h1 a .second {
 /* ======= Box 4 Our mission & vision ======= */
 .box4 {
     text-align: center;
+    position: relative;
+    max-width: 80%;
+    left: 10%;
 }
 
 .box4 img {
@@ -1092,25 +1077,28 @@ h1 a .second {
 }
 
 /* ======= List 1 ======= */
-.list1 li {
-    font: 300 27px/35px "Roboto Slab", sans-serif;
+.list1 {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 1rem;
+    width: 90%;
+    margin: 50px auto 0px;
+}
+
+.list1 div {
     color: #00284d;
 }
 
-.list1 li i {
+.list1 div i {
     padding-left: 34px;
     color: #66b3ff;
 }
 
-.list1 li a:hover:before {
+.list1 div a:hover:before {
     color: #00284d;
 }
 
-.list1 li+li {
-    margin-top: 13px;
-}
-
-.list1 li+li::after {
+.list1 div+div::after {
     content: '';
     position: absolute;
     display: block;
@@ -1171,6 +1159,10 @@ h1 a .second {
 
 .list1__inset1 li a {
     padding-left: 0;
+}
+
+.list1 > div > p{
+    display: inline;
 }
 
 /* ======= Social buttons 1 ======= */
@@ -1372,6 +1364,10 @@ h1 a .second {
         font: 400 57px/63px "Roboto Slab", sans-serif;
     }
 
+    h6 {
+        font: 300 26px/38px "Roboto Slab", sans-serif;
+    }
+
     .img-container {
         top: 0;
         height: 400px;
@@ -1402,6 +1398,10 @@ h1 a .second {
 
     .list1__inset1 li {
         width: 60%;
+    }
+
+    .list1 div {
+        font: 300 27px/35px "Roboto Slab", sans-serif;
     }
 
     #map {
@@ -1585,10 +1585,11 @@ h1 a .second {
         justify-content: center;
     }
 
-    .list1-wrapper1 {
-        grid-template-columns: repeat(3, minmax(100px, 400px));
+    .list1 {
+        grid-template-columns: repeat(3, minmax(100px, 500px));
+        grid-template-rows: repeat(auto-fill, auto);
         grid-gap: 1rem;
-        width: 100%;
+        width: 98%;
         justify-content: center;
     }
 
