--- a/css/styles.css
+++ b/css/styles.css
@@ -153,10 +153,9 @@ h6 a:hover {
 }
 
 .wrapper2 {
-    /* margin-top: -40px; */
-    margin-top: 600px;
+    margin-top: -90px;
     background: #f7f7f7;
-    padding: 50px 0 105px;
+    padding: 0px 0 105px;
 }
 
 .wrapper2__inset1 {
@@ -341,11 +340,24 @@ h6 a:hover {
     pointer-events: all;
 }
 
-.line {
-    width: 30px;
-    height: 3px;
+.lineTop, .lineMiddle, .lineBottom {
+    width: 35px;
+    height: 4px;
     background-color: #c0c0c0;
     margin: 3px;
+    transition: transform 0.4s;
+}
+
+.open .lineTop {
+    transform: rotate(-45deg) translate(-7px, 7px);
+}
+  
+.open .lineMiddle {
+    opacity: 0;
+}
+  
+.open .lineBottom {
+    transform: rotate(45deg) translate(-7px, -7px);
 }
 
 .navButton {
@@ -364,6 +376,12 @@ h6 a:hover {
     border-radius: 50%;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
     z-index: 2;
+    transition: background-color 1s ease-out, box-shadow 1s ease-out;
+}
+
+.navButton.open {
+    background-color: transparent;
+    box-shadow: unset;
 }
 
 .sf-menu > li {
@@ -497,12 +515,11 @@ h1 a .second {
 =========================================================*/
 .img-container {
     width: 100%;
-    height: 802px;
+    height: 100vh;
+    position: relative;
+    top: -93px;
     background: center / cover no-repeat url(../images/baby.jpg);
     /* https://unsplash.com/photos/p76UivR30oo */
-    position: absolute;
-    top: -10%;
-    right: 0;
 }
 
 .img-container::after {
@@ -517,11 +534,6 @@ h1 a .second {
     right: 0;
 }
 
-.img-container img {
-    width: 100%;
-    display: block;
-}
-
 .teaser {
     width: 80%;
     display: flex;
@@ -529,7 +541,7 @@ h1 a .second {
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 80%;
+    top: 75%;
     transform: translateX(-50%);
     left: 50%;
     background: -webkit-linear-gradient(#007EA7, #00171F);
@@ -1369,10 +1381,6 @@ h1 a .second {
 }
 
 @media (min-width: 501px) {
-    .wrapper2 {
-        margin-top: 300px;
-    }
-
     #logo {
         padding: 20px 25px;
     }
@@ -1394,7 +1402,7 @@ h1 a .second {
     }
 
     .img-container {
-        top: 0;
+        top: -127px;
         height: 400px;
         background-image: url(../images/baby-cover.jpg);
         /* https://unsplash.com/photos/5arky4TZZ0Y */
@@ -1436,11 +1444,8 @@ h1 a .second {
 }
 
 @media (min-width: 1024px) {
-    .wrapper2 {
-        margin-top: 450px;
-    }
-
     .img-container {
+        top: -133px;
         height: 600px;
     }
 
@@ -1883,10 +1888,6 @@ h1 a .second {
 }
 
 @media (min-width: 1670px) {
-    .wrapper2 {
-        margin-top: 700px;
-    }
-
     .img-container {
         height: 800px;
     }
