--- a/ejs/galleryST.ejs
+++ b/ejs/galleryST.ejs
@@ -118,6 +118,8 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/carousel.js"></script>
+            <script src="../js/gallery.js"></script>
 </body>
 
 </html>
