--- a/ejs/contacts.ejs
+++ b/ejs/contacts.ejs
@@ -33,7 +33,7 @@
                         <a href="mailto:geral@clinicagynebe.com.pt" class="simple-link">geral@clinicagynebe.com.pt</a>
                     </span>
                 </address>
-                <div class="schedule">
+                <div class="schedule fade-in">
                     <h3>Horario:</h3>
                     <ul>
                         <li><strong>Segunda-feira:</strong> 9h-14h</li>
