--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -25,19 +25,19 @@
             <div class="slider">
                 <div class="wrapper">
                     <div class="slides">
-                        <span class="slide"><img src="../images/page4_img4.png" alt="" />
+                        <span class="slide"><img src="../images/page4_img4.png" alt="" >
                             <h2 class="sliderText gine">
-                                <a href="specialties.html">Ginecologia</a>
+                                <a href="specialties">Ginecologia</a>
                             </h2>
                         </span>
-                        <span class="slide"><img src="../images/page1_img1.png" alt="" />
+                        <span class="slide"><img src="../images/page1_img1.png" alt="" >
                             <h2 class="sliderText obs">
-                                <a href="specialties.html">Obstetrícia</a>
+                                <a href="specialties">Obstetrícia</a>
                             </h2>
                         </span>
-                        <span class="slide"><img src="../images/page1_img2.png" alt="" />
+                        <span class="slide"><img src="../images/page1_img2.png" alt="" >
                             <h2 class="sliderText ped">
-                                <a href="specialties.html">Pediatria</a>
+                                <a href="specialties">Pediatria</a>
                             </h2>
                         </span>
                     </div>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="box4-wrapper1">
                     <div class="box4">
-                        <img class="fade-in" src="../images/page2_img1.png" alt="" />
+                        <img class="fade-in" src="../images/page2_img1.png" alt="">
                         <h6 class="fade-in">
                             Na Clínica Gynébe todos os colaboradores estão vocacionados e orientados para o servir
                             melhor
@@ -75,59 +75,59 @@
                 </div>
                 <div class="box3-wrapper1">
                     <div class="box3 fade-in">
-                        <img src="../images/mca.jpg" alt="" />
-                        <h3>
-                            <a>Dra. Manuela Calado Araújo</a>
-                        </h3>
+                        <a href="mca">
+                            <img src="../images/mca.jpg" alt="">
+                        </a>
+                        <h3><a href="mca">Dra. Manuela Calado Araújo</a></h3>
                         <p>Ginecologista/Obstetra</p>
                     </div>
 
                     <div class="box3 fade-in">
-                        <img src="../images/gv.jpg" alt="" />
-                        <h3>
-                            <a>Dra. Gabriela Vasconcellos</a>
-                        </h3>
+                        <a href="gv">
+                            <img src="../images/gv.jpg" alt="">
+                        </a>
+                        <h3><a href="gv">Dra. Gabriela Vasconcellos</a></h3>
                         <p>Pediatra/Neonatologista</p>
                     </div>
 
                     <div class="box3 fade-in">
-                        <img src="../images/profile.png" alt="" />
+                        <a href="ac"><img src="../images/profile.png" alt=""></a>
                         <h3>
-                            <a>Dra. Ana Carriço</a>
+                            <a href="ac">Dra. Ana Carriço</a>
                         </h3>
                         <p>Cardiologista Pedriátrica</p>
                     </div>
 
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <img src="../images/lc.jpg" alt="" />
-                        <h3>
-                            <a>Dra. Leonilde Coelho</a>
-                        </h3>
+                        <a href="lc">
+                            <img src="../images/lc.jpg" alt="">
+                        </a>
+                        <h3><a href="lc">Dra. Leonilde Coelho</a></h3>
                         <p>Endocrinologista</p>
                     </div>
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <img src="../images/profile.png" alt="" />
+                        <a href="ds"><img src="../images/profile.png" alt=""></a>
                         <h3>
-                            <a>Dra. Dília Soares</a>
+                            <a href="ds">Dra. Dília Soares</a>
                         </h3>
                         <p>Nutricionista</p>
                     </div>
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <img src="../images/profile.png" alt="" />
+                        <a href="mb"><img src="../images/profile.png" alt=""></a>
                         <h3>
-                            <a>Dra. Marta Baltar</a>
+                            <a href="mb">Dra. Marta Baltar</a>
                         </h3>
                         <p>Psicóloga/Psicoterapeuta</p>
                     </div>
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <img src="../images/profile.png" alt="" />
+                        <img src="../images/profile.png" alt="">
                         <h3>
                             <a>Filipa Gomes</a>
                         </h3>
                         <p>Assistente Operacional</p>
                     </div>
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <img src="../images/profile.png" alt="" />
+                        <img src="../images/profile.png" alt="">
                         <h3>
                             <a>Francisco Araújo</a>
                         </h3>
