--- a/ejs/specialties.ejs
+++ b/ejs/specialties.ejs
@@ -42,9 +42,11 @@
             <div class="wrapper5">
                 <div class="box5-wrapper1">
                     <div id="gyne" class="box5">
-                        <img class="fade-in" src="../images/gyne.png" alt="" />
+                        <a href="mca">
+                            <img class="fade-in" src="../images/gyne.png" alt="">
+                        </a>
                         <h3 class="h3__inset1 fade-in">
-                            Ginecologia
+                            <a href="mca">Ginecologia</a>
                         </h3>
                         <p class="fade-in">
                             O seguimento ginecológico regular desde a adolescência até a menopausa é essencial na
@@ -69,9 +71,11 @@
                         </ul>
                     </div>
                     <div id="obs" class="box5">
-                        <img class="fade-in" src="../images/page3_img2.png" alt="" />
+                        <a href="mca">
+                            <img class="fade-in" src="../images/page3_img2.png" alt="">
+                        </a>
                         <h3 class="h3__inset1 fade-in">
-                            Obstetrícia
+                            <a href="mca">Obstetrícia</a>
                         </h3>
                         <p class="fade-in">
                             A Obstetrícia faz o acompanhamento desde da pré-concepção ao pós-parto, em situações
@@ -92,10 +96,11 @@
                     </div>
 
                     <div id="ped" class="box5">
-                        </li>
-                        <img class="fade-in" src="../images/pediatrics.jpg" alt="" />
+                        <a href="gv">
+                            <img class="fade-in" src="../images/pediatrics.jpg" alt="">
+                        </a>
                         <h3 class="h3__inset2 fade-in">
-                            Pediatria
+                            <a href="gv">Pediatria</a>
                             <!-- https://unsplash.com/photos/JcrysJBO8kQ -->
                         </h3>
                         <p class="fade-in">
@@ -119,9 +124,11 @@
                     </div>
 
                     <div id="endo" class="box5">
-                        <img class="fade-in" src="../images/endo.jpg" alt="" />
+                        <a href="lc">
+                            <img class="fade-in" src="../images/endo.jpg" alt="">
+                        </a>
                         <h3 class="h3__inset3 fade-in">
-                            Endocrinologia
+                            <a href="lc">Endocrinologia</a>
                             <!-- https://unsplash.com/photos/Nqj2XWHy4K0 -->
                         </h3>
                         <p class="fade-in">A endocrinologia é a especialidade médica que se dedica ao diagnóstico e
@@ -145,10 +152,11 @@
                         </ul>
                     </div>
                     <div id="psy" class="box5">
-                        <img class="fade-in" src="../images/psychologist.jpg" alt="" />
+                        <a href="mb">
+                            <img class="fade-in" src="../images/psychologist.jpg" alt="">
+                        </a>
                         <h3 class="h3__inset1 fade-in">
-                            Psicologia
-
+                            <a href="mb">Psicologia</a>
                         </h3>
                         <p class="fade-in">
                             Nesta consulta, destacam-se:<br>
@@ -171,9 +179,9 @@
                     </div>
                     <div id="nut" class="box5">
                         </li>
-                        <img class="fade-in" src="../images/nutrition.jpg" alt="" />
+                        <a href="ds"><img class="fade-in" src="../images/nutrition.jpg" alt=""></a>
                         <h3 class="h3__inset2 fade-in">
-                            Nutrição
+                            <a href="ds">Nutrição</a>
                             <!-- https://unsplash.com/photos/QZub8Ni3x_c -->
                         </h3>
                         <p class="fade-in">
@@ -213,7 +221,7 @@
                 </ul> -->
                     </div>
                     <!-- <div id="fisio" class="box5">
-                <img class="fade-in" src="../images/fisio.png" alt="" />
+                <img class="fade-in" src="../images/fisio.png" alt="">
                 <h3 class="h3__inset1 fade-in">
                     Fisioterapia
                     https://unsplash.com/photos/a9pFSC8dTlo
@@ -247,6 +255,7 @@
             <script src="../js/app.js"></script>
             <script src="../js/intersectionObservers.js"></script>
             <script src="../js/headerNavbar.js"></script>
+            <script src="../js/buttonOnSpecialties.js"></script>
 </body>
 
 </html>
