--- a/ejs/contacts_santo_tirso.ejs
+++ b/ejs/contacts_santo_tirso.ejs
@@ -20,9 +20,6 @@
                 <div class="heading1 fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                     <h2>Clinica Gynébe de Santo Tirso</h2>
                 </div>
-                <div class="map-wrapper1 map-wrapper1__offset1">
-                    <div class="google-map2" id="google-map"></div>
-                </div>
                 <div id="map"></div>
                 <address class="our-address fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                     <a href="https://www.google.com/maps/dir/?api=1&travelmode=driving&layer=traffic&destination=41.34035341648697,-8.477143117721402"
@@ -35,7 +32,7 @@
                         <a href="mailto:geral@clinicagynebe.com.pt" class="simple-link">geral@clinicagynebe.com.pt</a>
                     </span>
                 </address>
-                <div class="schedule">
+                <div class="schedule fade-in">
                     <h3>Horario:</h3>
                     <ul>
                         <li><strong>Segunda-feira:</strong> 14h-20h</li>
